@@ -26,12 +26,12 @@ public class RegisterDescriptor extends VariableDescriptor implements ICDIRegist
 	 * @see org.eclipse.cdt.debug.mi.core.cdi.model.VariableDescriptor#getFullName()
 	 */
 	public String getFullName() {
-		if (fullName == null) {
+		if (fFullName == null) {
 			String n = getName();
 			if (!n.startsWith("$")) { //$NON-NLS-1$
-				fullName = "$" + n; //$NON-NLS-1$
+				fFullName = "$" + n; //$NON-NLS-1$
 			}
 		}
-		return fullName;
+		return fFullName;
 	}
 }
